@@ -468,7 +468,9 @@ public abstract class JobStoreSupport implements JobStore, Constants {
      */
     public void setDriverDelegateClass(String delegateClassName)
         throws InvalidConfigurationException {
-        this.delegateClassName = delegateClassName;
+        synchronized(this) {
+            this.delegateClassName = delegateClassName;
+        }
     }
 
     /**
@@ -1736,7 +1738,7 @@ public abstract class JobStoreSupport implements JobStore, Constants {
         return ((Integer)executeWithoutLock( // no locks necessary for read...
                 new TransactionCallback() {
                     public Object execute(Connection conn) throws JobPersistenceException {
-                        return new Integer(getNumberOfJobs(conn));
+                        return Integer.valueOf(getNumberOfJobs(conn));
                     }
                 })).intValue();
     }
@@ -1762,7 +1764,7 @@ public abstract class JobStoreSupport implements JobStore, Constants {
         return ((Integer)executeWithoutLock( // no locks necessary for read...
                 new TransactionCallback() {
                     public Object execute(Connection conn) throws JobPersistenceException {
-                        return new Integer(getNumberOfTriggers(conn));
+                        return Integer.valueOf(getNumberOfTriggers(conn));
                     }
                 })).intValue();
     }
@@ -1788,7 +1790,7 @@ public abstract class JobStoreSupport implements JobStore, Constants {
         return ((Integer)executeWithoutLock( // no locks necessary for read...
                 new TransactionCallback() {
                     public Object execute(Connection conn) throws JobPersistenceException {
-                        return new Integer(getNumberOfCalendars(conn));
+                        return Integer.valueOf(getNumberOfCalendars(conn));
                     }
                 })).intValue();
     }
@@ -3013,60 +3015,57 @@ public abstract class JobStoreSupport implements JobStore, Constants {
      */
     @SuppressWarnings("unchecked")
     protected DriverDelegate getDelegate() throws NoSuchDelegateException {
-        if (null == delegate) {
-            synchronized(this) {
-                if(null == delegate) {
-                    try {
-                        if(delegateClassName != null) {
-                            delegateClass = 
-                                getClassLoadHelper().loadClass(delegateClassName);
-                        }
-                        
-                        // TODO: the current method of instantiating and initializing delegates is really sucky
-                        // probably all constructor args should be moved to the initialize method and/or use
-                        // the TablePrefixAware interface to set some things (and rename that interface to
-                        // something more apt), etc. etc.
-                        
-                        Constructor<?> ctor = null;
-                        Object[] ctorParams = null;
-                        if (canUseProperties()) {
-                            Class[] ctorParamTypes = new Class[]{
-                                Logger.class, String.class, String.class, ClassLoadHelper.class, Boolean.class};
-                            ctor = delegateClass.getConstructor(ctorParamTypes);
-                            ctorParams = new Object[]{
-                                getLog(), tablePrefix, instanceName, instanceId, getClassLoadHelper(), new Boolean(canUseProperties())};
-                        } else {
-                            Class[] ctorParamTypes = new Class[]{
-                                Logger.class, String.class, String.class, String.class, ClassLoadHelper.class};
-                            ctor = delegateClass.getConstructor(ctorParamTypes);
-                            ctorParams = new Object[]{getLog(), tablePrefix, instanceName, instanceId, getClassLoadHelper()};
-                        }
-        
-                        delegate = (DriverDelegate) ctor.newInstance(ctorParams);
-                        
-                        delegate.initialize(getDriverDelegateInitString());
-                        
-                    } catch (NoSuchMethodException e) {
-                        throw new NoSuchDelegateException(
-                                "Couldn't find delegate constructor: " + e.getMessage());
-                    } catch (InstantiationException e) {
-                        throw new NoSuchDelegateException("Couldn't create delegate: "
-                                + e.getMessage());
-                    } catch (IllegalAccessException e) {
-                        throw new NoSuchDelegateException("Couldn't create delegate: "
-                                + e.getMessage());
-                    } catch (InvocationTargetException e) {
-                        throw new NoSuchDelegateException("Couldn't create delegate: "
-                                + e.getMessage());
-                    } catch (ClassNotFoundException e) {
-                        throw new NoSuchDelegateException("Couldn't load delegate class: "
-                                + e.getMessage());
+        synchronized(this) {
+            if(null == delegate) {
+                try {
+                    if(delegateClassName != null) {
+                        delegateClass = 
+                            getClassLoadHelper().loadClass(delegateClassName);
                     }
+                    
+                    // TODO: the current method of instantiating and initializing delegates is really sucky
+                    // probably all constructor args should be moved to the initialize method and/or use
+                    // the TablePrefixAware interface to set some things (and rename that interface to
+                    // something more apt), etc. etc.
+                    
+                    Constructor<?> ctor = null;
+                    Object[] ctorParams = null;
+                    if (canUseProperties()) {
+                        Class[] ctorParamTypes = new Class[]{
+                            Logger.class, String.class, String.class, String.class, ClassLoadHelper.class, Boolean.class};
+                        ctor = delegateClass.getConstructor(ctorParamTypes);
+                        ctorParams = new Object[]{
+                            getLog(), tablePrefix, instanceName, instanceId, getClassLoadHelper(), Boolean.valueOf(canUseProperties())};
+                    } else {
+                        Class[] ctorParamTypes = new Class[]{
+                            Logger.class, String.class, String.class, String.class, ClassLoadHelper.class};
+                        ctor = delegateClass.getConstructor(ctorParamTypes);
+                        ctorParams = new Object[]{getLog(), tablePrefix, instanceName, instanceId, getClassLoadHelper()};
+                    }
+    
+                    delegate = (DriverDelegate) ctor.newInstance(ctorParams);
+                    
+                    delegate.initialize(getDriverDelegateInitString());
+                    
+                } catch (NoSuchMethodException e) {
+                    throw new NoSuchDelegateException(
+                            "Couldn't find delegate constructor: " + e.getMessage(), e);
+                } catch (InstantiationException e) {
+                    throw new NoSuchDelegateException("Couldn't create delegate: "
+                            + e.getMessage(), e);
+                } catch (IllegalAccessException e) {
+                    throw new NoSuchDelegateException("Couldn't create delegate: "
+                            + e.getMessage(), e);
+                } catch (InvocationTargetException e) {
+                    throw new NoSuchDelegateException("Couldn't create delegate: "
+                            + e.getMessage(), e);
+                } catch (ClassNotFoundException e) {
+                    throw new NoSuchDelegateException("Couldn't load delegate class: "
+                            + e.getMessage(), e);
                 }
             }
+            return delegate;
         }
-
-        return delegate;
     }
 
     protected Semaphore getLockHandler() {
@@ -3131,7 +3130,7 @@ public abstract class JobStoreSupport implements JobStore, Constants {
         if(sigTime == null && candidateNewNextFireTime >= 0L)
             sigChangeForTxCompletion.set(candidateNewNextFireTime);
         else {
-            if(candidateNewNextFireTime < sigTime)
+            if(sigTime == null || candidateNewNextFireTime < sigTime)
                 sigChangeForTxCompletion.set(candidateNewNextFireTime);
         }
     }
